api: implemented API to update user profile
