# internal/handler/user.go
@@ -2,8 +2,10 @@ package handler
 
 import (
 	"strconv"
+	"strings"
 
 	"github.com/gofiber/fiber/v2"
+	"github.com/sudo-hassan-zahid/go-api-server/internal/dto"
 	"github.com/sudo-hassan-zahid/go-api-server/internal/service"
 )
 
@@ -58,4 +60,69 @@ func (h *UserHandler) GetUserByID(c *fiber.Ctx) error {
 		return err
 	}
 	return c.JSON(user)
+}
+
+// UpdateUser 	 godoc
+// @Summary      Update a user
+// @Description  Updates a user with given ID
+// @Tags         Users
+// @Security     BearerAuth
+// @Accept       json
+// @Produce      json
+// @Param        id path string true "User UUID"
+// @Param        user body dto.UpdateUserRequest true "User info"
+// @Success      200 {object} dto.SuccessResponse "User updated successfully"
+// @Failure      400 {object} map[string]string "Bad request / validation error"
+// @Failure      401 {object} map[string]string "Unauthorized"
+// @Failure      500 {object} map[string]string "Internal server error"
+// @Router       /users/{id} [patch]
+func (h *UserHandler) UpdateUser(c *fiber.Ctx) error {
+	userID := strings.TrimSpace(c.Params("id"))
+	if userID == "" {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "user id is required",
+		})
+	}
+
+	id, err := strconv.ParseUint(userID, 10, 32)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "invalid user id format",
+		})
+	}
+
+	_, err = h.service.GetUserByID(uint(id))
+	if err != nil {
+		return err
+	}
+
+	var updateUser dto.UpdateUserRequest
+	if err := c.BodyParser(&updateUser); err != nil {
+		return err
+	}
+
+	err = h.service.UpdateUser(uint(id), updateUser)
+	if err != nil {
+		return err
+	}
+	return c.JSON(fiber.Map{
+		"message": "User updated successfully",
+	})
+}
+
+// DeleteUser 	 godoc
+// @Summary      Delete a user
+// @Description  Deletes a user with given ID
+// @Tags         Users
+// @Security     BearerAuth
+// @Accept       json
+// @Produce      json
+// @Param        id path string true "User UUID"
+// @Success      200 {object} map[string]string "User deleted successfully"
+// @Failure      400 {object} map[string]string "Bad request / validation error"
+// @Failure      401 {object} map[string]string "Unauthorized"
+// @Failure      500 {object} map[string]string "Internal server error"
+// @Router       /users/{id} [delete]
+func (h *UserHandler) DeleteUser(c *fiber.Ctx) error {
+	panic("not implemented")
 }
